# AnonyMus

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  2026-07-20-comprehensive-remaining-issues-plan.md  ANONYMUS_UNIFIED_MERGE_PLAN.md  AnonyMus_Comprehensive_Plan.md  Caddyfile.docker  Cargo.toml  Dockerfile  Dockerfile.relay  FEATURES.md  FINISHING_TOUCHES_PLAN.md  README.md  SETUP.md  agent.md  anonymus-launcher.py  anonymus_plan.md  build.py  cli.py  database.py  deployment_guide.md  docker-compose.yml  install.sh  launcher.py  mkdocs.yml  prod_plan.md  pyproject.toml  reproducible_attestation.json  requirements-v3.in  requirements.in  requirements.txt  rollback.ps1  rollback.sh  server.py  setup.iss  tasklist.md  tor_manager.py  tor_setup.md  torrc.docker  (+1 more)
.github/: CODEOWNERS  dependabot.yml  required-checks.txt
.github/workflows/: android.yml  background-improvement.yml  ci-health.yml  ci.yml  codeql.yml  external-intelligence.yml  ios.yml  js.yml  python.yml  release.yml  reproducible-build.yml  rust.yml  sbom.yml  semgrep.yml  test.yml  web.yml
AnonyMus_android/: gradle.properties
AnonyMus_android/app/: build.gradle.kts
AnonyMus_android/gradle/: libs.versions.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0081668158d9_create_prekey_bundles.py  075354cafd1e_add_sealed_sender_column.py  698e812f0dfc_add_profiles_abuse_and_supporter_badges.py  71b9e6fd267b_create_v3_settings_and_notifications.py  780ce35d17d9_add_contact_keys_and_status.py  82c9e7fd389a_reconcile_orm_and_migrations.py
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
app_main/: Dockerfile  SETUP.md  database.py  docker-compose.yml  server.py  server_main.py  tor_setup.md
app_p2p/: database.py  database_p2p.py  server.py  server_p2p.py  tor_manager.py  tor_manager_p2p.py
core/: capability_tiers.py  config.py  crypto.py  double_ratchet.py  gunicorn_check.py  interfaces.py  logging.py  logging_v3.py  migrations.py  mls_groups.py  pq_kem.py  protocol.py  queue_cryptobox.py  sdk.py  security_headers.py  sync.py  tor_daemon.py  transport_registry.py
core/rust/: Cargo.toml
core/rust/src/: identity.rs  lib.rs
core/rust/src/crypto/: aead.rs  argon2.rs  ed25519.rs  hkdf.rs  ml_kem.rs  mod.rs  x25519.rs
core/rust/src/ffi/: android.rs  mod.rs  python.rs  swift.rs  wasm.rs
core/rust/src/protocol/: double_ratchet.rs  mls.rs  mod.rs  padding.rs  pq_ratchet.rs  sealed_sender.rs  x3dh.rs
core/rust/tests/: integration_tests.rs
core/rust/tests/kat/: v3-vectors.json
docs/: FEATURES.md  REPRODUCE.md  TRANSPARENCY.md  index.md
ios/: AnonyMusApp.swift
launcher/: build.py  build_release_packages.py  launcher.py
old_docs/: ANONYMUS_GITHUB_LOG.md  ANONYMUS_PRODUCTION_PLAN.md
privacy_chat_android/: settings.gradle.kts
scratch/: prepare_files.py
scripts/: ci-preflight.sh  export_openapi.py  generate-commit-map.py  rewrite_git_history.py  verify_reproducible_build.py
static/: chat.js  crypto.js  login.js  style.css
templates/: chat.html  login.html
tests/: conftest.py  run_tests.py  schema_p2p.sql  schema_relay.sql  test_database.py  test_integration.py
web/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+244 files in other folders)
