[package]
name = "anonymus-core"
version = "3.0.0"
edition = "2021"
authors = ["AnonyMus Contributors"]

[lib]
name = "anonymus_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crypto primitives
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
ml-kem = "0.2"
aes-gcm = "0.10"
chacha20poly1305 = "0.11"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
getrandom = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# Error handling
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI (optional, per-platform)
pyo3 = { version = "0.29", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
jni = { version = "0.22", optional = true }
uniffi = { version = "0.28", features = ["cli"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
serde_json = "1"
hex = "0.4"

[features]
default = []
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
android = ["dep:jni"]
swift = ["dep:uniffi"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
